--- a/Blackjack/blackjack.html
+++ b/Blackjack/blackjack.html
@@ -13,6 +13,7 @@
     <p id="message-el">Want to Play a Round?</p>
     <p id="card-el">Cards: </p>
     <p id="sum-el">Sum: </p>
+    <p id="player-el"></p>
     <script src="blackjack.js"></script>
     <button onclick="startGame()">Start button</button>
     <button onclick="newCard()">New card</button>
